fix a minor layout bug in firefox

--- a/css/ef.gy.css
+++ b/css/ef.gy.css
@@ -762,6 +762,7 @@ ul#hardcopies li
   margin: 0;
   padding: 0.5em 1em;
   color: #999;
+  white-space: nowrap;
 }
 ul#hardcopies li a
 {
